# TicTacToe

./: README.md  main.py  pyproject.toml
classes/: board.py  game.py  gui.py
